[tool.poetry]
name = "pandapowertools"
version = "0.1.0"
description = ""
authors = ["vicjan89 <vicjan89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
setuptools = "^69.5.1"
pandapower = "^2.14.6"
ipython = "^8.23.0"
matplotlib = "^3.9.0"
igraph = "^0.11.5"
textengines = {path = "../textengines", develop = true}
pymupdf = "^1.24.5"
pyside6 = "^6.7.1"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
