[tool.poetry]
name = "pandapowertools"
version = "0.1.0"
description = ""
authors = ["vicjan89 <vicjan89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.9,<3.13"
setuptools = "^70.1.0"
pandapower = "^2.14.8"
ipython = "^8.23.0"
matplotlib = "^3.9.0"
igraph = "^0.11.5"
textengines = {path = "../textengines", develop = true}
pymupdf = "^1.24.5"
pyside6 = "^6.7.1"
numpy = "1.26.0"
store = {path = "../store", develop = true}
numba = "^0.60.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
max3ph = "main:kz_max"
